@@ -1,11 +1,11 @@
 /*
- * Copyright 2012-2017 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -52,8 +52,7 @@ final class ChangeableUrls implements Iterable<URL> {
 		DevToolsSettings settings = DevToolsSettings.get();
 		List<URL> reloadableUrls = new ArrayList<URL>(urls.length);
 		for (URL url : urls) {
-			if ((settings.isRestartInclude(url) || isFolderUrl(url.toString()))
-					&& !settings.isRestartExclude(url)) {
+			if ((settings.isRestartInclude(url) || isFolderUrl(url.toString())) && !settings.isRestartExclude(url)) {
 				reloadableUrls.add(url);
 			}
 		}
@@ -104,12 +103,10 @@ final class ChangeableUrls implements Iterable<URL> {
 			return Collections.<URL>emptyList();
 		}
 		try {
-			return getUrlsFromManifestClassPathAttribute(jarFile);
+			return getUrlsFromManifestClassPathAttribute(url, jarFile);
 		}
 		catch (IOException ex) {
-			throw new IllegalStateException(
-					"Failed to read Class-Path attribute from manifest of jar " + url,
-					ex);
+			throw new IllegalStateException("Failed to read Class-Path attribute from manifest of jar " + url, ex);
 		}
 	}
 
@@ -126,36 +123,36 @@ final class ChangeableUrls implements Iterable<URL> {
 		return null;
 	}
 
-	private static List<URL> getUrlsFromManifestClassPathAttribute(JarFile jarFile)
-			throws IOException {
+	private static List<URL> getUrlsFromManifestClassPathAttribute(URL jarUrl, JarFile jarFile) throws IOException {
 		Manifest manifest = jarFile.getManifest();
 		if (manifest == null) {
 			return Collections.<URL>emptyList();
 		}
-		String classPath = manifest.getMainAttributes()
-				.getValue(Attributes.Name.CLASS_PATH);
+		String classPath = manifest.getMainAttributes().getValue(Attributes.Name.CLASS_PATH);
 		if (!StringUtils.hasText(classPath)) {
 			return Collections.emptyList();
 		}
 		String[] entries = StringUtils.delimitedListToStringArray(classPath, " ");
 		List<URL> urls = new ArrayList<URL>(entries.length);
-		File parent = new File(jarFile.getName()).getParentFile();
+		List<URL> nonExistentEntries = new ArrayList<URL>();
 		for (String entry : entries) {
 			try {
-				File referenced = new File(parent, entry);
-				if (referenced.exists()) {
-					urls.add(referenced.toURI().toURL());
+				URL referenced = new URL(jarUrl, entry);
+				if (new File(referenced.getFile()).exists()) {
+					urls.add(referenced);
 				}
 				else {
-					System.err.println("Ignoring Class-Path entry " + entry + " found in"
-							+ jarFile.getName() + " as " + referenced
-							+ " does not exist");
+					nonExistentEntries.add(referenced);
 				}
 			}
 			catch (MalformedURLException ex) {
-				throw new IllegalStateException(
-						"Class-Path attribute contains malformed URL", ex);
+				throw new IllegalStateException("Class-Path attribute contains malformed URL", ex);
 			}
+		}
+		if (!nonExistentEntries.isEmpty()) {
+			System.out.println("The Class-Path manifest attribute in " + jarFile.getName()
+					+ " referenced one or more files that do not exist: "
+					+ StringUtils.collectionToCommaDelimitedString(nonExistentEntries));
 		}
 		return urls;
 	}
